# lamure

./: CMakeLists.txt
apps/aux_atlas_muxxer/: CMakeLists.txt  main.cpp
apps/aux_muxer/: CMakeLists.txt  main.cpp
apps/bvh_extractor/: CMakeLists.txt
apps/bvh_modifier/: CMakeLists.txt
apps/e57_converter/: CMakeLists.txt  main.cpp
apps/lod_converter/: CMakeLists.txt
apps/point_cloud_compression_app/: CMakeLists.txt
apps/preprocessing/: CMakeLists.txt  main.cpp
apps/prov_benchmark/: CMakeLists.txt
apps/prov_octree/: CMakeLists.txt
apps/prov_patch_concat/: CMakeLists.txt
apps/prov_to_aux/: CMakeLists.txt  main.cpp
apps/prov_vis/: CMakeLists.txt  Camera_Custom.h  Renderer.cpp  Renderer.h  Scene.cpp
apps/pvs_bounding_extrapolator/: CMakeLists.txt
apps/pvs_generator/: CMakeLists.txt
apps/pvs_grid_converter/: CMakeLists.txt
apps/pvs_visibility_analyzer/: CMakeLists.txt
apps/rendering/: CMakeLists.txt  management.h
apps/vis/: CMakeLists.txt  main.cpp
apps/vsfm_to_aux/: CMakeLists.txt  main.cpp
apps/vt_atlas_compiler/: CMakeLists.txt  GuillotineBinPack.cpp  main.cpp
apps/vt_atlas_obj_scaler/: CMakeLists.txt
apps/vt_montblanc/: CMakeLists.txt  VTRenderer.cpp
apps/vt_obj_renderer/: CMakeLists.txt
apps/vt_planets/: CMakeLists.txt  VTRenderer.cpp  main.cpp
apps/vt_preprocess_obj_transformer/: CMakeLists.txt
apps/vt_preprocessing/: CMakeLists.txt  main.cpp
apps/vt_raw_converter/: CMakeLists.txt
apps/vt_stitch/: CMakeLists.txt  TileStitcher.cpp  TileStitcher.h
apps/xyz_normal_color/: CMakeLists.txt  main.cpp
apps/xyz_resampler/: CMakeLists.txt  main.cpp
apps/xyz_transformer/: CMakeLists.txt  main.cpp
cmake/modules/: FindGLFW3.cmake  findGLFW3.cmake  find_cgal.cmake  find_e57.cmake  find_osg.cmake  find_schism.cmake
common/: CMakeLists.txt
common/include/lamure/: types.h
mesh_preprocessing/: CMakeLists.txt
preprocessing/: CMakeLists.txt
preprocessing/include/lamure/pre/: array_abstract.h  basic_algorithms.h  builder.h  bvh.h  reduction_normal_deviation_clustering_provenance.h  reduction_strategy_provenance.h  surfel.h
preprocessing/include/lamure/pre/io/: converter.h  file.h  file.inl  format_abstract.h  format_bin.h  format_bin_all.h  format_bin_prov.h  format_e57.h  format_ply.h  format_xyz.h  format_xyz_all.h  format_xyz_grey.h  merger.h
preprocessing/src/: basic_algorithms.cpp  builder.cpp  bvh.cpp  node_serializer.cpp  reduction_normal_deviation_clustering_provenance.cpp
preprocessing/src/io/: converter.cpp  format_bin.cpp  format_bin_all.cpp  format_bin_prov.cpp  format_e57.cpp  format_ply.cpp  format_xyz.cpp  format_xyz_all.cpp  format_xyz_grey.cpp  format_xyz_prov.cpp  merger.cpp
provenance/: CMakeLists.txt
provenance/include/lamure/prov/: aux_stream.h  octree.h  octree_node.h  prov_aux.h
pvs_common/: CMakeLists.txt
pvs_preprocessing/: CMakeLists.txt
pvs_preprocessing/src/: renderer.cpp
rendering/: CMakeLists.txt
rendering/include/lamure/ren/: ooc_cache.h
rendering/src/: gpu_context.cpp  ooc_cache.cpp
virtual_texturing/: CMakeLists.txt
virtual_texturing/include/lamure/vt/: Observable.h  Observer.h  QuadTree.h  VTConfig.h  common.h
virtual_texturing/include/lamure/vt/ooc/: TileCache.h  TileRequestMap.h
virtual_texturing/include/lamure/vt/pre/: Bitmap.h
virtual_texturing/src/ooc/: TileCache.cpp  TileRequestMap.cpp
virtual_texturing/src/pre/: DeltaECalculator.cpp
virtual_texturing/src/ren/: CutUpdate.cpp
